# airco-tracking-nl

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  README.nl.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
airco_tracker/: __init__.py  cli.py  config.py
airco_tracker/adapters/: __init__.py  bol.py  diy.py  lidl.py  praxis.py
docs/: HANDOFF.md
infra/: job.bicep
scripts/: bootstrap-github-oidc.sh  configure-bol-api.sh  deploy-application.sh
tests/: test_cli.py  test_parsers.py
