[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "airco-tracker-nl"
version = "0.3.0"
description = "Portable air-conditioner stock tracker for Dutch retailers"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "requests>=2.31,<3",
  "urllib3>=1.26,<2",
]

[project.optional-dependencies]
azure = [
  "azure-communication-email>=1.0,<2",
  "azure-identity>=1.17,<2",
  "azure-keyvault-secrets>=4.8,<5",
  "azure-storage-blob>=12.22,<13",
]

[project.scripts]
airco-tracker = "airco_tracker.cli:main"

[tool.setuptools.packages.find]
include = ["airco_tracker*"]
